# hp-isochoric-thermal-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: experiments.yaml  fit_exp06.yaml  geometry.yaml  predict_exp07.yaml
scripts/: export_figures.py  run_fit.py  run_predict.py
src/hpmodel/: __init__.py  eos.py  fit.py  geometry.py  io.py  objective.py  plotting.py  predict.py  preprocessing.py  pressure_model.py  simulation.py  thermal_model.py
