[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hp-isochoric-thermal-model"
version = "0.1.0"
description = "Reduced thermal-thermodynamic model for high-pressure isochoric experiments"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Vanessa Andrea Mascietti" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
